force-app/main/default/objects/Scoring_Detail__c/Scoring_Detail__c.object-meta.xml
<CustomObject>
    <description>This Object allows for detailed scoring of another object.</description>
    <label>Scoring Detail</label>
    <nameField>
        <displayFormat>SD-{0}</displayFormat>
        <label>Scoring Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scoring Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>