force-app/main/default/objects/Scoring_Detail__c/fields/Awarded_Points__c.field-meta.xml
<CustomField>
    <fullName>Awarded_Points__c</fullName>
    <description>Points awarded by an individual scorer</description>
    <label>Awarded Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>