force-app/main/default/objects/Scoring_Detail__c/fields/Evaluation_Item__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Item__c</fullName>
    <label>Evaluation Item</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>