force-app/main/default/objects/Scoring_Detail__c/fields/Review_Complete__c.field-meta.xml
<CustomField>
    <fullName>Review_Complete__c</fullName>
    <formula>IF(ISPICKVAL(Status__c, &apos;Complete&apos;), true, false)</formula>
    <label>Review Complete</label>
    <type>Checkbox</type>
</CustomField>