force-app/main/default/objects/Scoring_Detail__c/fields/Scorer_Summary__c.field-meta.xml
<CustomField>
    <fullName>Scorer_Summary__c</fullName>
    <description>Creates Master Detail to Scorer Summary</description>
    <label>Scorer Summary</label>
    <referenceTo>Scorer_Summary__c</referenceTo>
    <relationshipLabel>Scoring Details</relationshipLabel>
    <relationshipName>Scoring_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>