force-app/main/default/objects/Scoring_Detail__c/validationRules/Max_points_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Max_points_validation</fullName>
    <active>true</active>
    <description>You cannot enter more than the max number of points</description>
    <errorConditionFormula>Awarded_Points__c &gt; Max_Points__c</errorConditionFormula>
    <errorDisplayField>Awarded_Points__c</errorDisplayField>
    <errorMessage>Awarded points cannot excel Max</errorMessage>
</ValidationRule>