force-app/main/default/objects/Scoring_Detail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Evaluation_Item__c</columns>
    <columns>Awarded_Points__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Max_Points__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>